@@ -1,5 +1,8 @@
 2005-12-28  Callum McKenzie  <callum@spooky-possum.org>
 
+	* events.c (button_press_event): Make the middle button a
+	synthetic double-click. As suggested by sigge in bug #324614.
+
 	* draw.c: Calculate the card list compression ratio directly
 	rather than using the old iterative method. This is not only more
 	efficient, but also means that long stacks of cards don't shorten
